2005-06-11  Hans Breuer  <hans@breuer.org>

	* configure.in config.h.win32.h : mark as +cvs (should have been 
	done directly after the 0.94 release)
	* NEWS : attempt to summarize 2/3 year of development

	[ 
	  WANTK_AUTOMAKE=1.7 ./autogen.sh && ./conifugre  --enable-maintatiner-mode && make distcheck
	  finally passes again
	]
	* app/app_procs.c : force use of POPT for the GNOME case, otherwise
	app/run_dia.sh --credits > THANKS => Segmentation fault
	* app/pixmaps/Makefile.am : added group.png and ungroup.png
	* Makefile.am : work around scrollkeeper bug
	* doc/en/Makefile.am : explicit list DISTCLEANFILES = dia.1

	* po/*.po : 'noise' produced by make dist

2005-06-10  Hans Breuer  <hans@breuer.org>

	* lib/properties.h : define PROP_STD_SHOW_BACKGROUND_OPTIONAL ...
	* objects/custom/custom_object.c : ... and use it to avoid 
	complains about missing attribute "show_background". It is 
	safe to leave this uninitialized. Same for flip_* and "text",
	the latter with comment cause it usually is *not* safe to do 
	it for the general case. Fixes remaining issues with bug #169006
	which where caused by an incompatible change in the shape file.

	* app/commands.c : use "gnome-open" instead of "netscape" as
	fallback for $BROWSER not set. Still not optimal but better
	to try some common desktop tool than an obsolete browser;)
	Fixes bug #307142. Also some whitespace changes.

	* app/interface.c(toolbox_delete): avoid random return value.
	Patch from Stanislav Brabec, fixes bug #307143

	* shapes/Cisco/Makefile.am : added a bunch of new shapes/pngs.
	Patch from Torben H. Nielsen (bugzilla is still the preferred way)
	http://mail.gnome.org/archives/dia-list/2005-June/msg00015.html

2005-06-06  Lars Clausen  <lars@raeder.dk>

	* app/diagram.c: 
	* app/modify_tool.c:
	* app/textedit.[ch]:
	Better support for text edit highlight.

	* app/connectionpoint_ops.c (connectionpoint_draw): Stop making
	the mainpoint extra visible.

2005-06-02  Lars Clausen  <lars@raeder.dk>
